--- a/src/themes/pug.css
+++ b/src/themes/pug.css
@@ -121,10 +121,9 @@ body[data-theme="pug"] {
     font-weight: 500;
   }
 
-  .question-container {
-    text,
-    [data-testid="filter-pill"] {
-      font-weight: 500 !important;
-    }
+  /** WORKAROUND: change the font weight of viz label / filter pill */
+  .question-viz-container svg text,
+  .question-filter-bar-container [data-testid="filter-pill"] {
+    font-weight: 500 !important;
   }
 }
