--- a/src/themes/luminara.css
+++ b/src/themes/luminara.css
@@ -55,7 +55,7 @@ body[data-theme="luminara"] {
     text-align: center;
   }
 
-  .sidebar-link-root {
+  .sidebar-link-parent {
     font-weight: 600;
   }
 
