--- a/src/themes/acme.css
+++ b/src/themes/acme.css
@@ -24,9 +24,13 @@ body[data-theme="acme"] {
   .sidebar-link-icon {
     padding: 2px;
     font-size: 16px;
-    color: rgba(121, 121, 121, 1);
-    background: rgba(0, 0, 0, 0.05);
+    color: rgba(106, 87, 201, 0.75);
+    background: rgba(106, 87, 201, 0.06);
     border-radius: 4px;
+
+    svg path {
+      stroke-width: 2px;
+    }
   }
 
   .sidebar-link-parent {
