--- a/src/themes/acme.css
+++ b/src/themes/acme.css
@@ -94,9 +94,22 @@ body[data-theme="acme"] {
     background: var(--color-primary);
   }
 
-  .dashboard-container [data-testid="scalar-container"] h1 {
-    font-size: 36px;
-    font-weight: 700;
+  .dashboard-container {
+    [data-testid="legend-caption"] {
+      padding-bottom: 2px;
+    }
+
+    [data-testid="legend-caption-title"] {
+      color: var(--color-dark-grey);
+      font-weight: 700;
+    }
+
+    [data-testid="scalar-container"] h1  {
+      font-size: 36px;
+      line-height: 40px;
+      font-weight: 700;
+      color: var(--color-dark-grey);
+    }
   }
 
   .navbar {
@@ -144,10 +157,6 @@ body[data-theme="acme"] {
 
   .product-card-title {
     color: var(--color-light-grey);
-  }
-
-  .dashboard-container [data-testid="scalar-container"] h1 {
-    color: var(--color-dark-grey);
   }
 }
 
