--- a/src/themes/proficiency.css
+++ b/src/themes/proficiency.css
@@ -208,6 +208,13 @@ body[data-theme="proficiency"] {
       background: transparent;
     }
   }
+
+  .drill-question-container h2 {
+    width: 400px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 body:not([data-theme="proficiency"]) .show-only-on-proficiency {
