--- a/src/themes/proficiency.css
+++ b/src/themes/proficiency.css
@@ -60,7 +60,7 @@ body[data-theme="proficiency"] {
   .sidebar-child-container .sidebar-link-title {
     color: var(--color-light-grey);
   }
-  
+
   .sidebar-active-child {
     background: rgba(106, 87, 201, 0.1);
     transition: background 0.4s ease;
@@ -95,14 +95,6 @@ body[data-theme="proficiency"] {
 
   .themed-button {
     background: var(--color-primary);
-  }
-
-  .navbar {
-    padding-top: 100px !important;
-
-    @media screen and (min-width: 768px) {
-      padding-top: 70px !important;
-    }
   }
 
   .product-detail-title,
@@ -146,10 +138,10 @@ body[data-theme="proficiency"] {
 
     /** WORKAROUND: bold all caps for the tooltip header */
     [data-testid="tooltip-header"] {
-     font-weight: 700;
-     text-transform: uppercase;
+      font-weight: 700;
+      text-transform: uppercase;
     }
-    
+
     [data-testid="row-name"] {
       font-weight: 400;
     }
@@ -167,11 +159,11 @@ body[data-theme="proficiency"] {
 
   /** WORKAROUND: tooltip font weight and capitalization */
   .echarts-tooltip-container [data-testid="echarts-tooltip"] {
-   /** bold all caps for the tooltip header */
-   [data-testid="echarts-tooltip-header"]  {
-     font-weight: 700;
-     text-transform: uppercase;
-   }
+    /** bold all caps for the tooltip header */
+    [data-testid="echarts-tooltip-header"] {
+      font-weight: 700;
+      text-transform: uppercase;
+    }
 
     /** bold weight for tooltip numbers */
     tr td:nth-child(3),
@@ -202,9 +194,13 @@ body[data-theme="proficiency"] {
     }
   }
 
-  .question-container, .dashboard-container {
+  .question-container,
+  .dashboard-container {
     /* WORKAROUND: hide the table background, while keeping popover backgrounds white */
-    [role="gridcell"], [role="columnheader"], [data-testid="TableInteractive-root"], [aria-label="grid"] {
+    [role="gridcell"],
+    [role="columnheader"],
+    [data-testid="TableInteractive-root"],
+    [aria-label="grid"] {
       background: transparent;
     }
   }
