Closes EMB-874 PDF exports visual glitches

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,13 @@
 @layer tailwind {
   @tailwind base;
+
+  /*
+    needed to not mess up PDF exports
+    tailwind's preflight is a bit too harsh
+  */
+  img {
+    display: unset;
+  }
 }
 
 @tailwind components;
