--- a/src/styles/dashboard-workaround.css
+++ b/src/styles/dashboard-workaround.css
@@ -27,12 +27,18 @@ body[data-theme="stitch"] {
   /** WORKAROUND: only apply the css overrides when we are not exporting to pdf and png */
   .smartscalar:not(.dashboard-container):not(.product-card-trend),
   .smartscalar.dashboard-container:not(.product-card-trend)
-  #Dashboard-Parameters-And-Cards-Container:not(.saving-dom-image)
-  [data-dashcard-key]:not(.saving-dom-image) {
+    #Dashboard-Parameters-And-Cards-Container:not(.saving-dom-image)
+    [data-dashcard-key]:not(.saving-dom-image) {
     [data-testid="scalar-container"] h1 {
       font-size: 30px;
       font-weight: 500;
-      background: linear-gradient(93.53deg, #E590ED 9.53%, #828ED9 39.15%, #79C1FD 65.02%, #B1DBF8 84.51%);
+      background: linear-gradient(
+        93.53deg,
+        #e590ed 9.53%,
+        #828ed9 39.15%,
+        #79c1fd 65.02%,
+        #b1dbf8 84.51%
+      );
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -44,13 +50,13 @@ body[data-theme="proficiency"] .dashboard-container {
   [data-testid="legend-caption"] {
     padding-bottom: 2px;
   }
-  
+
   [data-testid="legend-caption-title"] {
     color: var(--color-dark-grey);
     font-weight: 700;
   }
 
-  [data-testid="scalar-container"] h1  {
+  [data-testid="scalar-container"] h1 {
     font-size: 36px;
     line-height: 40px;
     font-weight: 700;
@@ -60,11 +66,5 @@ body[data-theme="proficiency"] .dashboard-container {
   /* WORKAROUND: hide the top border of the footer */
   footer {
     border: none;
-  }
-
-  h2 {
-    color: var(--color-dark-grey);
-    font-size: 32px;
-    font-weight: 700;
   }
 }
